<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:background="@color/light_gray"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <android.support.v7.widget.CardView
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageButton
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:background="@color/light_gray"
                        android:src="@drawable/ic_phone_black_24dp"
                        android:padding="8dp"
                        android:onClick="call"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/call"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/talk_to_a_friend"
                        android:padding="10dp"
                        android:textSize="10sp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageButton
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:background="@color/light_gray"
                        android:src="@drawable/ic_music_note_black_24dp"
                        android:padding="8dp"
                        android:onClick="music"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/music1"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/music"
                        android:padding="10dp"
                        android:textSize="10sp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <android.support.v7.widget.CardView
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageButton
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:background="@color/light_gray"
                        android:src="@drawable/ic_library_books_black_24dp"
                        android:padding="8dp"
                        android:onClick="browser2"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/library"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="15sp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="6dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/libraries_around_me"
                        android:padding="8dp"
                        android:textSize="10sp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageButton
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:background="@color/light_gray"
                        android:src="@drawable/ic_mood_black_24dp"
                        android:padding="8dp"
                        android:onClick="browser3"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/smile"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="6dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/funfact"
                        android:textSize="10sp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <android.support.v7.widget.CardView
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageButton
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:background="@color/light_gray"
                        android:src="@drawable/ic_whatshot_black_24dp"
                        android:padding="8dp"
                        android:onClick="browser1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/events"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event1"
                        android:padding="8dp"
                        android:textSize="10sp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageButton
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:background="@color/light_gray"
                        android:src="@drawable/ic_delete_black_24dp"
                        android:padding="8dp"
                        android:onClick="junk"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clean_junk"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/junk"
                        android:padding="8dp"
                        android:textSize="10sp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>

</ScrollView>